@@ -2,11 +2,12 @@ package com.sprint.mission.discodeit.auth.service;
 
 import com.sprint.mission.discodeit.dto.response.UserDto;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 /**
@@ -25,8 +26,7 @@ public class DiscodeitUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // 아직 권한 정보 없음
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_" + userDto.role().name()));
     }
 
     @Override
